# statify

./: .cursorignore  .dockerignore  .env.env  .env.example  .eslintrc.json  .gitignore  .gitlab-ci.yml  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  README_Statify_63.md  SUMI_TESTING_REGRESSION.md  descriptive-statistics-class-diagram.md  docker-compose.yml  dummy_duplicate_cases.csv  jest.config.ts  migrate-tests.bat  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  translate_guides.js  tsconfig.json  tsconfig.server.json
frontend/wasm/: Cargo.toml  OPTIMIZATIONS.md
frontend/wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
frontend/wasm/src/: lib.rs
frontend/wasm/src/correspondence/: README.md
frontend/wasm/src/discriminant/: mod.rs
frontend/wasm/src/hierarchical/: mod.rs
frontend/wasm/src/time_series/: mod.rs
src/wasm/: Cargo.toml
src/wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/wasm/src/: lib.rs
src/wasm/src/regression/: mod.rs
wasm/: Cargo.toml
wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
wasm/src/captca/stats/: core.rs  correlation.rs  matrix.rs  missing_values.rs  object_scores.rs
wasm/src/captca/utils/: error.rs
wasm/src/captca/wasm/: constructor.rs
wasm/src/correspondence/models/: config.rs  data.rs  result.rs
wasm/src/correspondence/stats/: common.rs  correspondence_table.rs  generate_visualization.rs  inertia.rs  normalization.rs  permutation_test.rs  profiles.rs
wasm/src/correspondence/wasm/: constructor.rs  function.rs
wasm/src/discriminant/models/: mod.rs  result.rs
wasm/src/discriminant/stats/: bootstrapping.rs  box_m_test.rs  classification_result.rs  covariance_matrices.rs  generate_histograms.rs  generate_plots.rs  pooled_matrices.rs  prior_probabilities.rs  structure_matrix.rs
wasm/src/discriminant/utils/: converter.rs  mod.rs
wasm/src/discriminant/wasm/: constructor.rs  function.rs  mod.rs
wasm/src/factor/models/: data.rs
wasm/src/factor/stats/: core.rs  factor_extraction.rs  kmo_test.rs  matrix.rs  mod.rs  report.rs  rotation.rs  wrapper.rs
wasm/src/factor/utils/: converter.rs
wasm/src/factor/wasm/: constructor.rs  function.rs
wasm/src/hierarchical/models/: data.rs  result.rs
wasm/src/hierarchical/stats/: agglomeration.rs  calculate_distance.rs  cluster_membership.rs  common.rs  dendrogram.rs  icicle_plot.rs  transformation.rs
wasm/src/hierarchical/wasm/: constructor.rs  function.rs
wasm/src/kmeans/models/: data.rs  result.rs
wasm/src/kmeans/stats/: anova.rs  case_count.rs  cluster_centers.rs  cluster_membership.rs  common.rs  initialize_clusters.rs  iteration_history.rs  mod.rs  preprocess_data.rs
wasm/src/kmeans/wasm/: constructor.rs  function.rs
wasm/src/knn/models/: data.rs  result.rs
wasm/src/knn/stats/: classification_table.rs  common.rs  error_summary.rs  mersenne_twister.rs  mod.rs  nearest_neighbor.rs  peers_chart.rs  predictor_importance.rs  preprocess_data.rs  quadrant_map.rs
wasm/src/knn/utils/: converter.rs
wasm/src/knn/wasm/: constructor.rs  function.rs
wasm/src/mca/models/: config.rs  data.rs  result.rs
wasm/src/mca/stats/: core.rs  correlations.rs  discrimination_measures.rs  matrix.rs  missing_value.rs  mod.rs  save_model.rs
wasm/src/mca/wasm/: constructor.rs  function.rs
wasm/src/multivariate/models/: config.rs  data.rs  result.rs
wasm/src/multivariate/stats/: between_subjects_effects.rs  bootstrap.rs  box_m_test.rs  core.rs  descriptive_statistics.rs  homogeneous_subsets.rs  lack_of_fit.rs  levene_test.rs  mod.rs  power.rs  repeated.rs  residual_plots.rs  robust.rs  save.rs  spread_vs_level.rs
wasm/src/multivariate/wasm/: constructor.rs  function.rs
wasm/src/overals/models/: data.rs  result.rs
wasm/src/overals/stats/: core.rs  iteration_history.rs  transformation_plots.rs
wasm/src/overals/wasm/: constructor.rs  function.rs
wasm/src/repeated_measure/models/: config.rs  data.rs
wasm/src/repeated_measure/stats/: mod.rs
wasm/src/roc_analysis/models/: config.rs  data.rs  result.rs
wasm/src/roc_analysis/stats/: mod.rs
wasm/src/time_series/: mod.rs
(+3723 files in other folders)
